--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "bootstrap": "^4.1.3",
     "bootstrap-vue": "^2.0.0-beta",
     "cross-env": "^5.2.0",
+    "eslint-utils": "^1.4.3",
     "express": "^4.16.3",
     "morgan": "^1.9.1",
     "nuxt": "^2.0.0",
+    "serialize-javascript": "2.1.1",
     "sqlite3": "^4.0.6",
     "uuid": "^3.3.2"
   },
